<resources>
    <string name="app_name">Fitness App</string>
    <string name="home">Home</string>
    <string name="SportZal">Спортзал</string>
    <string name="Home">Упражнения</string>
    <string name="TrenZal">Статистика</string>
    <string name="OutDoors">Бег</string>
    <string name="Setting">Настройки</string>
    <string name="Enter">Вход</string>
    <string name="Remember">Запомнить</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main_screen">ActivityMainScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="themes">
        <item>Спорт</item>
        <item>Футбол</item>
        <item>Нейтральная</item>
        <item>Успокаивающая</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="strForLogIn">Придумайте Логин</string>
    <string name="strForPass">Придумайте Пароль</string>
    <string name="strForName">Ваше имя</string>
    <string name="height">Рост</string>
    <string name="Weight">Вес</string>
    <string-array name="names">
        <item>Отжимания</item>
        <item>Подтягивания</item>
        <item>Негативные отжимания</item>
        <item>Жим лежа 30кг</item>
        <item>Жим лежа 40кг</item>
        <item>Жим лежа 50кг</item>
        <item>Жим лежа 60кг</item>
        <item>Жим лежа 70кг</item>
        <item>Жим лежа 80кг</item>
        <item>Жим лежа 90кг</item>
        <item>Жим лежа 100кг</item>
        <item>Гиперэкстензия</item>
        <item>Рывок гири 8кг</item>
        <item>Рывок гири 16кг</item>
        <item>Рывок гири 24кг</item>
        <item>Рывок гири 32кг</item>
        <item>Сгибание рук с гантелями 5кг</item>
        <item>Сгибание рук с гантелями 10кг</item>
        <item>Сгибание рук с гантелями 15кг</item>
        <item>Сгибание рук с гантелями 20кг</item>
        <item>Сгибание рук с гантелями 25кг</item>
        <item>Сгибание рук с гантелями 30кг</item>
        <item>Подъем штанги на бицепс стоя 30кг</item>
        <item>Подъем штанги на бицепс стоя 40кг</item>
        <item>Подъем штанги на бицепс стоя 50кг</item>
        <item>Подъем штанги на бицепс стоя 60кг</item>
        <item>Подъем штанги на бицепс стоя 70кг</item>
        <item>Подъем штанги на бицепс стоя 80кг</item>
        <item>Подъем штанги на бицепс стоя 90кг</item>
        <item>Подъем штанги на бицепс стоя 100кг</item>
    </string-array>
    <string name="e_mail">e-mail</string>
    <string name="remember">Запомнить меня</string>
    <string name="ok">OK</string>
    <string name="Exit">Выход</string>
</resources>